--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Calirain is a Web App for academic management and computation for High Schools in Nigeria"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
@@ -16,8 +16,11 @@
     <title>Calibrain</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
+  <script>
+  if('serviceWorker' in Navigator){
+    navigator.serviceWorker.register('/serviceWorker.js')
+        .then(()=> {console.log('Service Worker registered')})
+}</script>
   </body>
 </html>
