--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,25 +18,24 @@
     <link rel="stylesheet" href="style.css">
     <!-- Custom Css -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title> Calibrain</title>
   </head>
-  <body>
+  <body class="theme-blush">
 
     <div id="root"></div>
 
-<!-- Jquery Core Js -->
-<script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
-<script src="assets/bundles/vendorscripts.bundle.js"></script> <!-- slimscroll, waves Scripts Plugin Js -->
+    <script src="assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
+    <script src="assets/bundles/vendorscripts.bundle.js"></script> <!-- slimscroll, waves Scripts Plugin Js -->
 
-<script src="assets/bundles/jvectormap.bundle.js"></script> <!-- JVectorMap Plugin Js -->
-<script src="assets/bundles/sparkline.bundle.js"></script> <!-- Sparkline Plugin Js -->
-<script src="assets/bundles/c3.bundle.js"></script>
+    <script src="assets/bundles/jvectormap.bundle.js"></script> <!-- JVectorMap Plugin Js -->
+    <script src="assets/bundles/sparkline.bundle.js"></script> <!-- Sparkline Plugin Js -->
+    <script src="assets/bundles/c3.bundle.js"></script>
 
-<script src="assets/bundles/mainscripts.bundle.js"></script>
-<script src="assets/js/pages/index.js"></script>
+    <script src="assets/bundles/mainscripts.bundle.js"></script>
+    <script src="assets/js/pages/index.js"></script>
   </body>
 </html>
